# mlflow-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
docs/: PRD.md
scripts/: smoke_test.py
